# agent-kanban-pm

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  INTEGRATION_SUMMARY.md  LICENSE  MANIFEST.in  MCP_SETUP.md  README.md  RUN.md  STATUS_REPORT.md  a2a.py  adapters.py  agent_reactor.py  auth.py  conftest.py  database.py  debug_ui.py  debug_ui_testclient.py  debug_ui_v2.py  demo_mcp_agent.py  event_bus.py  fixes.md  init_demo.py  main.py  mcp_server.py  models.py  open_project.py  pyproject.toml  reproduce_assign.py  requirements-mcp.txt  requirements.txt  schemas.py  smoke_test.py  sync_agents.py  test_agent_visibility.py  test_coordination_state.py  (+11 more)
.agent/workflows/: kanban-sync.md
.github/workflows/: python-package.yml
agents/: aider.yaml  claude.yaml  codex.yaml  continue.yaml  crush.yaml  gemini.yaml  goose.yaml  opencode.yaml
kanban_cli/: __init__.py  __main__.py  chat.py  chat_designer.py
kanban_runtime/: adapter_loader.py  assignment_launcher.py  handoff_protocol.py  instance.py  manager_daemon.py  paths.py  preferences.py  process_launcher.py  prompt_patterns.py  role_supervisor.py  session_streamer.py  stage_policy.py
kanban_runtime/data/agents/: aider.yaml  claude.yaml  codex.yaml  continue.yaml  crush.yaml  gemini.yaml  goose.yaml  opencode.yaml
kanban_runtime/data/mcp_configs/: gemini_cli.json  opencode.json
kanban_runtime/data/static/js/: main.js  theme.js
kanban_runtime/data/templates/: base.html  dashboard.html  kanban_board.html  project_git.html  project_workbench.html  projects.html
mcp_configs/: claude_code.json
routers/: agent_activity.py  agent_connections.py  auth.py  autopilot.py  entities.py  projects.py  stages.py  tasks.py  ui.py  websockets.py
static/css/: kanban_premium.css  style.css
static/js/: main.js
templates/: base.html  kanban_board.html  project_git.html  project_workbench.html  projects.html  register.html  users.html
tests/: conftest.py  smoke_test.py  test_agent_visibility.py  test_chat_designer.py  test_coordination_state.py  test_handoff_protocol.py  test_integration.py  test_phase1.py  test_phase2.py  test_phase6.py  test_rbac.py  test_roles_and_reviews.py  test_session_streamer_completion.py  test_stage_policy.py  test_ui_routes.py  test_ui_task_creation.py  tests_helper.py
