[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-kanban-pm"
dynamic = ["version"]
description = "Local-first Kanban project management for humans and headless CLI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Agent Kanban PM contributors" }
]
keywords = ["kanban", "agents", "mcp", "cli", "project-management"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",
  "sqlalchemy>=2.0.23",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-multipart>=0.0.6",
  "websockets>=12.0",
  "aiosqlite>=0.19.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.6",
  "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Raman369AI/agent-kanban-pm"
Repository = "https://github.com/Raman369AI/agent-kanban-pm"
Issues = "https://github.com/Raman369AI/agent-kanban-pm/issues"
Changelog = "https://github.com/Raman369AI/agent-kanban-pm/blob/main/CHANGELOG.md"
Architecture = "https://github.com/Raman369AI/agent-kanban-pm/blob/main/ARCHITECTURE.md"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "twine>=5.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[project.scripts]
kanban = "kanban_cli:main"
kanban-cli = "kanban_cli:main"

[tool.setuptools]
py-modules = [
  "adapters",
  "auth",
  "database",
  "event_bus",
  "main",
  "mcp_server",
  "models",
  "open_project",
  "schemas",
  "websocket_manager",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kanban_cli*", "kanban_runtime*", "routers*"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "kanban_runtime._version.__version__"}

[tool.setuptools.package-data]
kanban_runtime = ["_version.py"]
"kanban_runtime.data" = ["templates/*.html", "static/css/*.css", "static/js/*.js", "agents/*.yaml", "mcp_configs/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
